4B/cs444/tests/a1/fail/Je_1_BlacklistKeywords.java
public class Je_1_BlacklistKeywords {
   int switch,case,default,do,break,continue,try,catch,finally,throw,throws,goto;
}

